GladiusUnity2021/ModelImporter/Assets/Scripts/ANTLRgenerated/GladiusJournalParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GladiusJournal.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class GladiusJournalParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, ID=24, WS=25, 
		INT=26, FLOAT=27, OBR=28, CBR=29, COMMA=30, STRING=31, SINGLELINE_COMMENT=32;
	public const int
		RULE_root = 0, RULE_rumour = 1, RULE_conversation = 2, RULE_minDays = 3, 
		RULE_ursulaChoice = 4, RULE_valensChoice = 5, RULE_journalTitle = 6, RULE_journalText = 7, 
		RULE_shop = 8, RULE_gossip = 9, RULE_minLevel = 10, RULE_quest = 11, RULE_prize = 12, 
		RULE_success = 13, RULE_failure = 14, RULE_type = 15, RULE_encounter = 16, 
		RULE_onetime = 17, RULE_lastDay = 18, RULE_relativeDay = 19, RULE_item = 20, 
		RULE_yank = 21, RULE_location = 22;
	public static readonly string[] ruleNames = {
		"root", "rumour", "conversation", "minDays", "ursulaChoice", "valensChoice", 
		"journalTitle", "journalText", "shop", "gossip", "minLevel", "quest", 
		"prize", "success", "failure", "type", "encounter", "onetime", "lastDay", 
		"relativeDay", "item", "yank", "location"
	};

	private static readonly string[] _LiteralNames = {
		null, "'RUMOR'", "'CONVERSATION'", "'MINDAYS'", "'URSULACHOICE'", "'VALENSCHOICE'", 
		"'JOURNALTITLE'", "'JOURNALTEXT'", "'Shop'", "'SHOP'", "'GOSSIP'", "'MINLEVEL'", 
		"'QUEST'", "'PRIZE'", "'SUCCESS'", "'FAILURE'", "'TYPE'", "'ENCOUNTER'", 
		"'ONETIME'", "'LASTDAY'", "'RELATIVEDAY'", "'ITEM'", "'YANK'", "'LOCATION'", 
		null, null, null, null, "'{'", "'}'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"ID", "WS", "INT", "FLOAT", "OBR", "CBR", "COMMA", "STRING", "SINGLELINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GladiusJournal.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GladiusJournalParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GladiusJournalParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GladiusJournalParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RumourContext[] rumour() {
			return GetRuleContexts<RumourContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RumourContext rumour(int i) {
			return GetRuleContext<RumourContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GossipContext[] gossip() {
			return GetRuleContexts<GossipContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GossipContext gossip(int i) {
			return GetRuleContext<GossipContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QuestContext[] quest() {
			return GetRuleContexts<QuestContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QuestContext quest(int i) {
			return GetRuleContext<QuestContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 49;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__0:
					{
					State = 46;
					rumour();
					}
					break;
				case T__9:
					{
					State = 47;
					gossip();
					}
					break;
				case T__11:
					{
					State = 48;
					quest();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__9) | (1L << T__11))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RumourContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusJournalParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConversationContext conversation() {
			return GetRuleContext<ConversationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MinDaysContext minDays() {
			return GetRuleContext<MinDaysContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UrsulaChoiceContext ursulaChoice() {
			return GetRuleContext<UrsulaChoiceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValensChoiceContext valensChoice() {
			return GetRuleContext<ValensChoiceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JournalTitleContext journalTitle() {
			return GetRuleContext<JournalTitleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JournalTextContext journalText() {
			return GetRuleContext<JournalTextContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShopContext[] shop() {
			return GetRuleContexts<ShopContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShopContext shop(int i) {
			return GetRuleContext<ShopContext>(i);
		}
		public RumourContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rumour; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterRumour(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitRumour(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRumour(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RumourContext rumour() {
		RumourContext _localctx = new RumourContext(Context, State);
		EnterRule(_localctx, 2, RULE_rumour);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			Match(T__0);
			State = 54;
			Match(STRING);
			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 55;
				conversation();
				}
			}

			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 58;
				minDays();
				}
			}

			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 61;
				ursulaChoice();
				}
			}

			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 64;
				valensChoice();
				}
			}

			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 67;
				journalTitle();
				}
			}

			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 70;
				journalText();
				}
			}

			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__7 || _la==T__8) {
				{
				{
				State = 73;
				shop();
				}
				}
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConversationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusJournalParser.STRING, 0); }
		public ConversationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conversation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterConversation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitConversation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConversation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConversationContext conversation() {
		ConversationContext _localctx = new ConversationContext(Context, State);
		EnterRule(_localctx, 4, RULE_conversation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(T__1);
			State = 80;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MinDaysContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusJournalParser.INT, 0); }
		public MinDaysContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_minDays; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterMinDays(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitMinDays(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMinDays(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MinDaysContext minDays() {
		MinDaysContext _localctx = new MinDaysContext(Context, State);
		EnterRule(_localctx, 6, RULE_minDays);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(T__2);
			State = 83;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UrsulaChoiceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusJournalParser.INT, 0); }
		public UrsulaChoiceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ursulaChoice; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterUrsulaChoice(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitUrsulaChoice(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUrsulaChoice(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UrsulaChoiceContext ursulaChoice() {
		UrsulaChoiceContext _localctx = new UrsulaChoiceContext(Context, State);
		EnterRule(_localctx, 8, RULE_ursulaChoice);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			Match(T__3);
			State = 86;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValensChoiceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusJournalParser.INT, 0); }
		public ValensChoiceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valensChoice; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterValensChoice(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitValensChoice(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValensChoice(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValensChoiceContext valensChoice() {
		ValensChoiceContext _localctx = new ValensChoiceContext(Context, State);
		EnterRule(_localctx, 10, RULE_valensChoice);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			Match(T__4);
			State = 89;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JournalTitleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusJournalParser.INT, 0); }
		public JournalTitleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_journalTitle; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterJournalTitle(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitJournalTitle(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJournalTitle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public JournalTitleContext journalTitle() {
		JournalTitleContext _localctx = new JournalTitleContext(Context, State);
		EnterRule(_localctx, 12, RULE_journalTitle);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(T__5);
			State = 92;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JournalTextContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusJournalParser.INT, 0); }
		public JournalTextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_journalText; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterJournalText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitJournalText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJournalText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public JournalTextContext journalText() {
		JournalTextContext _localctx = new JournalTextContext(Context, State);
		EnterRule(_localctx, 14, RULE_journalText);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(T__6);
			State = 95;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusJournalParser.STRING, 0); }
		public ShopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterShop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitShop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShopContext shop() {
		ShopContext _localctx = new ShopContext(Context, State);
		EnterRule(_localctx, 16, RULE_shop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			_la = TokenStream.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 98;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GossipContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusJournalParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConversationContext conversation() {
			return GetRuleContext<ConversationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UrsulaChoiceContext ursulaChoice() {
			return GetRuleContext<UrsulaChoiceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValensChoiceContext valensChoice() {
			return GetRuleContext<ValensChoiceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MinLevelContext minLevel() {
			return GetRuleContext<MinLevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MinDaysContext minDays() {
			return GetRuleContext<MinDaysContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JournalTitleContext journalTitle() {
			return GetRuleContext<JournalTitleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JournalTextContext journalText() {
			return GetRuleContext<JournalTextContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShopContext[] shop() {
			return GetRuleContexts<ShopContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShopContext shop(int i) {
			return GetRuleContext<ShopContext>(i);
		}
		public GossipContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gossip; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterGossip(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitGossip(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGossip(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GossipContext gossip() {
		GossipContext _localctx = new GossipContext(Context, State);
		EnterRule(_localctx, 18, RULE_gossip);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(T__9);
			State = 101;
			Match(STRING);
			State = 102;
			conversation();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 103;
				minLevel();
				}
			}

			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 106;
				minDays();
				}
			}

			State = 109;
			ursulaChoice();
			State = 110;
			valensChoice();
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 111;
				journalTitle();
				}
			}

			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 114;
				journalText();
				}
			}

			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__7 || _la==T__8) {
				{
				{
				State = 117;
				shop();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MinLevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusJournalParser.INT, 0); }
		public MinLevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_minLevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.EnterMinLevel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusJournalListener typedListener = listener as IGladiusJournalListener;
			if (typedListener != null) typedListener.ExitMinLevel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusJournalVisitor<TResult> typedVisitor = visitor as IGladiusJournalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMinLevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MinLevelContext minLevel() {
		MinLevelContext _localctx = new MinLevelContext(Context, State);
		EnterRule(_localctx, 20, RULE_minLevel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(T__10);
			State = 124;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
